# BashRunner

./: .gitignore  README.md  TESTING_SUMMARY.md  pyproject.toml
docs/: development.md
scripts/: README.md  __init__.py  build.sh  build_app.py
src/bashrunner/: __init__.py  main.py
src/bashrunner/core/: __init__.py  command_storage.py  storage_instance.py
src/bashrunner/gui/: __init__.py  commands_config.py  console_view.py  main_window.py  settings_dialog.py
tests/: __init__.py  test_command_storage.py  test_gui_widgets.py  test_integration.py
